--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="js/three.min.js"></script>
 	<script src="js/OrbitControls.js"></script>	
 	<script src="js/Detector.js"></script>		
+    <script src="js/loaders/DDSLoader.js"></script>
+    <script src="js/loaders/MTLLoader.js"></script>
+    <script src="js/loaders/OBJMTLLoader.js"></script>
 	<script>
         var bird = false;
 		var webglEl = document.getElementById('sphere');
@@ -24,15 +27,16 @@
         var projector = new THREE.Projector();
         var objects = [];
         var SELECTED = null;
+        var MODEL_ID = '_the_model_yo_';
 
 		var scene = new THREE.Scene();
 
 		var camera = new THREE.PerspectiveCamera(75, width / height, 0.1, 1000);
 		camera.position.x = 0.1;
+		//camera.position.y = 30;
 
 		var renderer = Detector.webgl ? new THREE.WebGLRenderer() : new THREE.CanvasRenderer();
 		renderer.setSize(width, height);
-        //renderer.domElement.addEventListener( 'mousedown', onDocumentMouseDown, false );
 
         //---------------------------------------------------------------------
         // create our pano sphere
@@ -50,6 +54,42 @@
 		);
 		sphere.scale.x = -1;
 		scene.add(sphere);
+
+        //---------------------------------------------------------------------
+        // obj 
+        //---------------------------------------------------------------------
+        var ambient = new THREE.AmbientLight( 0x444444 );
+        scene.add( ambient );
+
+        var directionalLight = new THREE.DirectionalLight( 0xffeedd );
+        directionalLight.position.set( 0, 1, 0 ).normalize();
+        scene.add( directionalLight );
+
+        THREE.Loader.Handlers.add( /\.dds$/i, new THREE.DDSLoader() );
+
+        var loader = new THREE.OBJMTLLoader();
+        loader.load( 'obj/house plant.obj', 'obj/house plant.mtl', function ( object ) {
+
+            object.applyMatrix( new THREE.Matrix4().makeTranslation( 0, -40, -60 ) );
+            object.scale.x = 0.1;
+            object.scale.y = 0.1;
+            object.scale.z = 0.1;
+
+            var obj_p = new THREE.Object3D();
+            obj_p.add(object);
+            obj_p.applyMatrix( new THREE.Matrix4().makeRotationY(125.0 * Math.PI/180.0 ));
+            
+            // JF expose it to mouse-selection.. requires pushing each child within
+            // the model
+            for ( var i = 0; i < object.children.length; ++ i ) {
+                object.children[i].name = MODEL_ID;
+                objects.push(object.children[i]);
+            }
+
+            scene.add( obj_p );
+
+        } );
+
         //---------------------------------------------------------------------
         // Adding cardinal axes for clarity
         //---------------------------------------------------------------------
@@ -221,7 +261,8 @@
                 //if intersects[0] is instanceof(THREE.Mesh)
                 if (intersects[0] != undefined) {
                     SELECTED = intersects[0];
-                    SELECTED.object.material.opacity = 0.10;
+                    SELECTED.object.material.opacity = 0.20;
+
                 }
             }
         }, false);
@@ -230,7 +271,10 @@
 			    event.preventDefault();
 
                 if (SELECTED != null){
-                    SELECTED.object.material.opacity = 0.65;
+                    if (SELECTED.object.name != MODEL_ID)
+                        SELECTED.object.material.opacity = 0.65;
+                    else
+                        SELECTED.object.material.opacity = 1.0;
                     SELECTED = null;
                 }
             }
